# specred

./: .gitignore  CLAUDE.md  LICENSE  pyproject.toml  specred.md
specred/agents/: analyzer.py  docwriter_agent.py  domain_agent.py  orchestrator.py  testgen_agent.py  usecase_agent.py
specred/cli/: main.py
specred/cli/commands/: feedback.py  generate.py  init.py  review.py
specred/mcp/: coverage.py  filesystem.py  watcher.py
specred/prompts/: domain.py  usecase.py
specred/prompts/testgen/: behavior.py  describe.py
specred/providers/: anthropic.py  base.py  factory.py  gemini.py  openai.py
specred/templates/: report.md.j2  usecase.mmd.j2
specred/utils/: filesystem.py
